[tool.poetry]
name = "GandiDynamicLIVEDNS"
version = "0.1.0"
description = "Gandi dynamic live dns"
authors = ["Josh Jacobs <josh@joshjacobs.net>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
